@@ -18,8 +18,8 @@ allied_wallet:
 
 # Working credentials, no need to replace as of Oct 28 2014
 authorize_net:
-  login: 5KP3u95bQpv
-  password: 4Ktq966gC55GAX7S
+  login: 7Tt72zseSzH
+  password: 7gTh55rdy92ZkP4z
 
 axcessms:
   channel: channel
